# whttp

./: Cargo.toml  README.md  Taskfile.yaml
.github/workflows/: CI.yml  auto-approve.yml
benches/: parse_request.rs  request_headers.rs  response_headers.rs
example/: Cargo.toml
example/src/: main.rs
src/: bytes.rs  lib.rs  str.rs  unsafe_cow.rs
src/header/: hash.rs  mod.rs  name.rs  value.rs
src/headers/: hash.rs  mod.rs  name.rs  util.rs  value.rs
src/headers/util/: cookies.rs  datetime.rs
src/http1/: load.rs  mod.rs  send.rs
src/request/: builder.rs  memory.rs  method.rs  mod.rs  path.rs
src/response/: body.rs  mod.rs  setcookie.rs  status.rs
src/response/ws/: mod.rs
