[package]
name          = "whttp"
version       = "0.1.0"
edition       = "2021"
authors       = ["kanarus <kanarus786@gmail.com>"]
documentation = "https://docs.rs/whttp"
homepage      = "https://crates.io/crates/whttp"
repository    = "https://github.com/ohkami-rs/whttp"
readme        = "README.md"
license       = "MIT"
description   = "A new, opinionated implementation of HTTP types for Rust"
keywords      = ["http"]
categories    = ["web-programming"]

[package.metadata.docs.rs]
features = ["sse", "ws", "http1", "rt_tokio"]

[dependencies]
hashbrown        = { version = "0.15" }
percent-encoding = { version = "2.3"  }
unsaferef        = { version = "0.1"  }
serde            = { version = "1.0"  }
serde_json       = { version = "1.0"  }
byte_reader      = { optional = true, version = "3.1" }
futures-core     = { optional = true, version = "0.3" }
mews             = { optional = true, git = "https://github.com/ohkami-rs/mews" }
tokio        = { optional = true, version = "1.40", features = ["io-util"] }
async-std    = { optional = true, version = "1.13" }
smol         = { optional = true, version = "2.0" }
# glommio    = { optional = true, version = "0.9" }
futures-util = { optional = true, version = "0.3", default-features = false, features = ["io"] }

[features]
sse = ["dep:futures-core"]
ws  = ["dep:mews"]
http1 = ["dep:byte_reader"]
rt_tokio     = ["dep:tokio",        "mews?/tokio"]
rt_async-std = ["dep:async-std",    "mews?/async-std"]
rt_smol      = ["dep:smol",         "mews?/smol"]
rt_glommio   = ["dep:futures-util", "mews?/glommio"]

### aliases ###
ws_tokio     = ["ws", "rt_tokio"]
ws_async-std = ["ws", "rt_async-std"]
ws_smol      = ["ws", "rt_smol"]
ws_glommio   = ["ws", "rt_glommio"]
http1_tokio     = ["http1", "rt_tokio"]
http1_async-std = ["http1", "rt_async-std"]
http1_smol      = ["http1", "rt_smol"]
http1_glommio   = ["http1", "rt_glommio"]

### DEBUG ###
DEBUG = []
### default = ["DEBUG", "sse", "ws", "http1", "rt_tokio", "tokio/full"]

[dev-dependencies]
http = "1.1"
byte_reader = "3.1"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
